fix shopping query with white space issue

--- a/app/files/landmark/css/style.css
+++ b/app/files/landmark/css/style.css
@@ -10098,21 +10098,21 @@ button.close {
   }
   .t11 .content-area .menbox .menbox-img .menbox-img-mask {
     opacity: 0;
-  }
-  .t11 .content-area .menbox .menbox-img:hover .menbox-img-mask {
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
+    position: absolute;
+  }
+  .t11 .content-area .menbox .menbox-img:hover .menbox-img-mask {
     display: block;
     opacity: 1;
     z-index: 20;
-    position: absolute;
-    -webkit-transition: all 0.5s ease-in;
-    -moz-transition: all 0.5s ease-in;
-    -o-transition: all 0.5s ease-in;
-    -ms-transition: all 0.5s ease-in;
-    transition: all 0.5s ease-in;
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    transition: all 0.5s linear;
     background: url("../images/black-50.png") repeat transparent;
   }
 }
@@ -10382,7 +10382,7 @@ button.close {
     box-sizing: border-box;
     border-left: 1px solid #CCCCCC;
     padding: 0 0 0 30px;
-    overflow-y: hidden;
+    /* overflow-y: hidden;*/
     font-size: 0.916em;
   }
   .t13 .brand-content .masonry-area h3 {
@@ -10748,6 +10748,10 @@ h4 a:active {
   font-size: 0;
   opacity: 0;
   position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
 }
 .gd-hover-img:hover {
   cursor: pointer;
